# annoying_screensaver

./: .gitignore  CMakeLists.txt  README.md  index.html  main.py  main.qml  run.sh  screensaver.html  screensaver.py  script.js  styles.css
qml/: main.qml
resources/: resources.qrc
src/: app_paths.cpp  app_paths.h  main.cpp  resource_utils.cpp  resource_utils.h  startup_options.cpp  startup_options.h
